tui/src/ui/snapshots/ai_skill__ui__search_panel__tests__snapshot_empty_query.snap
---
source: tui/src/ui/search_panel.rs
expression: terminal.backend().buffer().clone()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 20 },
    content: [
        "┌Search Catalog────────────────────────────────────────────────────────────────┐",
        "│┌Query───────────────────────────────────────────────────────────────────────┐│",
        "│││                                                                           ││",
        "│└────────────────────────────────────────────────────────────────────────────┘│",
        "│┌Results──────────────────────┐┌Preview──────────────────────────────────────┐│",
        "││                             ││No results                                   ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "│└─────────────────────────────┘└─────────────────────────────────────────────┘│",
        "└──────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
