tui/src/ui/snapshots/ai_skill__ui__search_panel__tests__snapshot_with_results.snap
---
source: tui/src/ui/search_panel.rs
expression: terminal.backend().buffer().clone()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 20 },
    content: [
        "┌Search Catalog────────────────────────────────────────────────────────────────┐",
        "│┌Query───────────────────────────────────────────────────────────────────────┐│",
        "││om│                                                                         ││",
        "│└────────────────────────────────────────────────────────────────────────────┘│",
        "│┌Results──────────────────────┐┌Preview──────────────────────────────────────┐│",
        "││omarchy                      ││name: omarchy                                ││",
        "││other                        ││                                             ││",
        "││                             ││WM skill                                     ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "│└─────────────────────────────┘└─────────────────────────────────────────────┘│",
        "└──────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 31, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
